--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -24,9 +24,7 @@ RUN apt-get update \
     ssh \
     mono-complete \
     software-properties-common \
-    apt-transport-https \
-    moby-engine \
-    moby-cli
+    apt-transport-https
 
 # Update packages
 RUN apt-get upgrade -y
@@ -38,7 +36,7 @@ RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
 RUN wget -q https://packages.microsoft.com/config/ubuntu/16.04/packages-microsoft-prod.deb \
     && dpkg -i packages-microsoft-prod.deb \
     && apt-get update \
-    && apt-get install -y powershell
+    && apt-get install -y powershell moby-engine moby-cli
 
 # Cleanup
 RUN apt-get autoremove -y \
