Update ubuntu to 18.04

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,11 +1,14 @@
 # https://docs.microsoft.com/en-us/azure/devops/pipelines/agents/docker?view=azure-devops
 
-FROM ubuntu:16.04
+FROM ubuntu:18.04
 
 # To make it easier for build and release pipelines to run apt-get,
 # configure apt to not require confirmation (assume the -y argument by default)
 ENV DEBIAN_FRONTEND=noninteractive
 RUN echo "APT::Get::Assume-Yes \"true\";" > /etc/apt/apt.conf.d/90assumeyes
+
+RUN wget -q https://packages.microsoft.com/config/ubuntu/16.04/packages-microsoft-prod.deb \
+    && dpkg -i packages-microsoft-prod.deb
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
@@ -24,19 +27,16 @@ RUN apt-get update \
     ssh \
     mono-complete \
     software-properties-common \
-    apt-transport-https
+    apt-transport-https \
+    powershell \
+    moby-engine \
+    moby-cli
 
 # Update packages
 RUN apt-get upgrade -y
 
 # Update azure-cli
 RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
-
-# Update powershell
-RUN wget -q https://packages.microsoft.com/config/ubuntu/16.04/packages-microsoft-prod.deb \
-    && dpkg -i packages-microsoft-prod.deb \
-    && apt-get update \
-    && apt-get install -y powershell moby-engine moby-cli
 
 # Cleanup
 RUN apt-get autoremove -y \
